--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ h1 {
   margin-bottom: 2rem;
 }
 
+#menu-image {
+    margin-top: 2rem;
+    max-width: 400px;
+    width: 80%;
+    border-radius: 10px;
+}
+
 #menu-display {
     margin-top: 2rem;
     font-size: 1.5rem;
